# LogInsight

./: .gitignore  DEVNOTES.md  README.md  pyproject.toml
src/loginsight/: app.py  cli.py  file.py  lineview.py  main.py
test/: test_file.py
